# poc-tungstenite-speed-slowdown

client-0-24-0/: Cargo.toml
client-0-24-0/src/: main.rs
client-0-25-0/: Cargo.toml
client-0-25-0/src/: main.rs
client-0-26-2/: Cargo.toml
client-0-26-2/src/: main.rs
server/: Cargo.toml
server/src/: main.rs
